--- a/README.rdoc
+++ b/README.rdoc
@@ -197,7 +197,7 @@ interface more seamless and provide advanced import features:
 == Requirements
 
 * Python >= 2.4, < 3.0
-* Ruby >= 1.8.6
+* Ruby >= 1.8.6, or JRuby >= 1.6.0
 * You must be able to build the ffi gem under your environment.
 
 Note: RubyPython has been tested on Mac OS 10.5, Mac OS 10.6, and Ubuntu 10.10
